
{{$NEXT}}

0.20130517 2013-05-17 America/Los_Angeles

 - send reports with zip until 7/1, gzip after
 - replace Socket 2 with Socket6 (better Windows compatibility)
 - added parsing of incoming email reports
 - added author and domain tables
 - added three related columns from/rcpt/author ids to report table
 - add email hostname to MX list when attempting SMTP delivery
 - during report delivery, check report URI max size

0.20130515 2013-05-15 America/Los_Angeles

 - use File::ShareDir to access share/*
 - added external reporting verification

0.20130514 2013-05-14 America/Los_Angeles

 - moved DNS settings into config file
 - fixed a case where disposition was not set
 - added bin/dmarc_report
   - sends email reports with Email::MIME & Net::SMTPS
 - deletes reports after successful delivery
 - required Socket 2 (correct IPv6 handling)
 - several SQL schema changes
 - has_valid_reporting_uri does validation now

0.20130510 2013-05-09 America/Los_Angeles

0.20130507 2013-05-07 America/Los_Angeles

 - added sql and MySQL schema
 - added bin/dmarc_lookup
 - replaced Regexp::Common IP validation with Net::IP (perl 5.8 compat)
 - added Results.pm tests
 - added full section numbers to Draft quotes

0.20130506 2013-05-06 America/Los_Angeles

 - added Result and Result/Evaluated.pm
 - consolidated DNS functions into DNS.pm
   - uses Regexp::Common, requiring perl 5.10.
 - Mail::DMARC::Policy is well defined and tested
 - setting up package