@@ -175,6 +175,9 @@ Or in a more perlish fashion:
     my $res = Net::DNS::Resolver->new(dnsrch => 0);
     $res->send('_dmarc.example.com', 'TXT');
 
+Or with the provided dmarc_lookup tool:
+
+    dmarc_lookup example.com
 
 =head1 USAGE
 
@@ -194,27 +197,27 @@ Or in a more perlish fashion:
 
 Create a new empty policy:
 
-   my $pol = Mail::DMARC::Policy->new;
+ my $pol = Mail::DMARC::Policy->new;
 
 Create a new policy from named arguments:
 
-   my $pol = Mail::DMARC::Policy->new(
-            v   => 'DMARC1',
-            p   => 'none',
-            pct => 50,
-           );
+ my $pol = Mail::DMARC::Policy->new(
+         v   => 'DMARC1',
+         p   => 'none',
+         pct => 50,
+         );
 
 Create a new policy from a DMARC DNS resource record:
 
-   my $pol = Mail::DMARC::Policy->new(
-            'v=DMARC1; p=reject; rua=mailto:dmarc@example.com; pct=50;'
-           );
+ my $pol = Mail::DMARC::Policy->new(
+         'v=DMARC1; p=reject; rua=mailto:dmarc@example.com; pct=50;'
+         );
 
 If a policy is passed in (the latter two examples), the resulting policy object will be an exact representation of the record as returned from DNS.
 
 =head1 apply_defaults
 
-Several of the DMARC tags (adkim,aspf,fo,ri,rf) have default values when not specified in the published DNS record. Calling this method will apply those defaults to the DMARC tags that were not specified in the DNS record. The resulting DMARC::Policy object will be a perfect representation of the DMARC policy that is/was applied.
+Several of the DMARC tags (adkim,aspf,fo,ri,rf) have default values when not specified in the published DNS record. Calling I<apply_defaults> will apply those default values to the DMARC tags that were not specified in the DNS record. The resulting L<Policy|Mail::DMARC::Policy> object will be a perfect representation of the DMARC policy that is/was applied.
 
 =head1 parse
 
